# Systems-Programming

./: .gitignore  CMakeLists.txt  README.md
lab_one/: 3_5_multiples.c  CMakeLists.txt  collatz_length.c  collatz_sequence.c  complex_numbers.c  fibonacci.c  find_max.c  fizzbuzz.c  number_to_word.c  pointers.c  simple_swap.c  triangles.c
personal/: list.c  list.h  main.c
