cmake_minimum_required(VERSION 3.20)
set(CMAKE_C_STANDARD 11)

project(hello_world)
project(simple_swap)
project(find_max)
project(triangles)
project(fizzbuzz)

add_executable(hello_world hello_world.c)
add_executable(simple_swap simple_swap.c)
add_executable(find_max find_max.c)
add_executable(triangles triangles.c)
add_executable(fizzbuzz fizzbuzz.c)
