cmake_minimum_required(VERSION 3.20)
set(CMAKE_C_STANDARD 11)

project(hello_world)
project(simple_swap)
project(3_5_multiples)
project(find_max)
project(triangles)
project(fizzbuzz)
project(fibonacci)
project(collatz_sequence)
project(collatz_length)
project(number_to_word)
project(complex_numbers)

add_executable(hello_world hello_world.c)
add_executable(simple_swap simple_swap.c)
add_executable(3_5_multiples 3_5_multiples.c)
add_executable(find_max find_max.c)
add_executable(triangles triangles.c)
add_executable(fizzbuzz fizzbuzz.c)
add_executable(fibonacci fibonacci.c)
add_executable(collatz_sequence collatz_sequence.c)
add_executable(collatz_length collatz_length.c)
add_executable(number_to_word number_to_word.c)
add_executable(complex_numbers complex_numbers.c)
